--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,12 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "base.html" %}
+{% load static %}
+
+{% block css_files %}
+    <link rel ="stylesheet" href="{% static "challenges/challenge.css" %}">
+    <link rel ="stylesheet" href="{% static "challenges/includes/header.css" %}">
+{% endblock%}
+{% block page_title %}
     <title>{{ month_name | title}} Challenge</title>
-</head>
-<body>
+{% endblock %}
+
+{% block content %}
+    {% include "challenges/includes/header.html" %}
     <h1>This Month's Challenge</h1>
-    <h2>{{ text }}</h2>
-</body>
-</html>
+    {% if text is not None %}
+        <h2>{{ text }}</h2>
+    {% else %}
+        <p class="fallback"> There is no challenge for this month yet!</p>
+    {% endif %}
+{% endblock %}
